--- a/index.html
+++ b/index.html
@@ -196,27 +196,27 @@
         <div class="gallery-wrapper">
             <section class="horizontal-gallery" id="projets">
                 <div class="project-card">
-                    <div class="project-image" style="background-image: url('projet1.jpg');"></div>
+                    <div class="project-image" style="background-image: url('projet1.jpeg');"></div>
                     <div class="project-meta"><span>Projet 01</span><span>Abidjan — CI</span></div>
                 </div>
                 <div class="project-card">
-                    <div class="project-image" style="background-image: url('projet2.jpg');"></div>
+                    <div class="project-image" style="background-image: url('projet2.jpeg');"></div>
                     <div class="project-meta"><span>Projet 02</span><span>Grand-Bassam — CI</span></div>
                 </div>
                 <div class="project-card">
-                    <div class="project-image" style="background-image: url('projet3.jpg');"></div>
+                    <div class="project-image" style="background-image: url('projet3.jpeg');"></div>
                     <div class="project-meta"><span>Projet 03</span><span>Assinie — CI</span></div>
                 </div>
                 <div class="project-card">
-                    <div class="project-image" style="background-image: url('projet4.jpg');"></div>
+                    <div class="project-image" style="background-image: url('projet4.jpeg');"></div>
                     <div class="project-meta"><span>Projet 04</span><span>Dakar — SN</span></div>
                 </div>
                 <div class="project-card">
-                    <div class="project-image" style="background-image: url('projet5.jpg');"></div>
+                    <div class="project-image" style="background-image: url('projet5.jpeg');"></div>
                     <div class="project-meta"><span>Projet 05</span><span>Libreville — GA</span></div>
                 </div>
                 <div class="project-card">
-                    <div class="project-image" style="background-image: url('projet6.jpg');"></div>
+                    <div class="project-image" style="background-image: url('projet6.jpeg');"></div>
                     <div class="project-meta"><span>Projet 06</span><span>Abidjan — CI</span></div>
                 </div>
             </section>
@@ -245,4 +245,5 @@
         });
     </script>
 </body>
+
 </html>
